cmake_minimum_required(VERSION 3.20)
# set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
SET (CMAKE_C_COMPILER_WORKS 1)
SET (CMAKE_CXX_COMPILER_WORKS 1)
PROJECT(JaydenCode)

set(CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
)

set(SRC ${PROJECT_SOURCE_DIR}/main.cpp)

ADD_EXECUTABLE(JaydenCode ${SRC})